--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-stellar": "^1.8.0"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.7"
   }
 }
