--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
-timezone: ''
+author: Nanai Jua
+language: ja
+timezone: 'Asia/Tokyo'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -97,7 +97,14 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: stellar
+plugins:
+  - hexo-robotstxt-multisitemaps
+theme: next
+
+robotstxt:
+  useragent: '*'
+  disallow:
+  allow:
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
